# vm-scheduling-energy-simgrid

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  run.sh  run_all.sh
docs/: findings.md
include/infrastructure/: host_state.h
include/metrics/: metrics.h
include/scheduling/: scheduler.h
include/scheduling/policies/: best_fit_scheduler.h  energy_aware_best_fit_scheduler.h  first_fit_scheduler.h  round_robin_scheduler.h
include/simulation/: simulation.h
include/workload/: workload.h
platform/: datacenter.xml
src/: main.cpp
src/infrastructure/: host_state.cpp
src/metrics/: metrics.cpp
src/scheduling/: scheduler_factory.cpp
src/scheduling/policies/: best_fit_scheduler.cpp  energy_aware_best_fit_scheduler.cpp  first_fit_scheduler.cpp  round_robin_scheduler.cpp
src/simulation/: simulation.cpp
src/workload/: workload.cpp
